Correct info cell width and next track overflow
- All columns in the info cell should be limited to the page width to
  avoid (mostly) mobile screens getting a little extra space
- Do not shrink the next track link such that all content should fit in
  it, at the expense of a faster scrolling animation

--- a/srv/style.scss
+++ b/srv/style.scss
@@ -26,8 +26,8 @@
     }
     @include mixins.mobile {
         .pagination-next.track:not(.is-hidden) {
+            flex-shrink: 0;
             min-width: 200vw;
-            overflow: hidden;
             display: inline-block;
             padding-left: 100%;
             animation: marquee 10s linear forwards;
@@ -54,22 +54,22 @@ table.main {
     .info {
         & > td {
             padding: .25em .25em 1em .5em;
+            & > .columns {
+                max-width: 100vw;
+                & > .column {
+                    max-width: 100vw;
+                }
+            }
         }
         .progression {
             overflow: auto;
-            max-width: 100vw;
         }
-        .artists {
-            &.is-narrow {
-                max-width: 100vw;
-            }
-            .container.artist-chart {
-                max-width: fit-content;
-                table.chart {
-                    margin: 0 auto;
-                    .is-selected {
-                        font-weight: bold;
-                    }
+        .container.artist-chart {
+            max-width: fit-content;
+            table.chart {
+                margin: 0 auto;
+                .is-selected {
+                    font-weight: bold;
                 }
             }
         }
